# agentforce

./: .gitignore  .graphifyignore  .impeccable.md  ABOUT.md  ARCHITECTURE.md  README.md  mission.spec  pyproject.toml
.github/workflows/: build.yml
agentforce/: __init__.py  autonomous.py  daemon.py  streaming.py  telemetry.py  utils.py
artifacts/: tiny-validation-mission.json
docs/: ANALYSIS.md  ANALYSIS_2026_04_09.md  ANALYSIS_POST_IMPROVEMENTS.md  COMPARISON_V2.md  HARNESS_REDESIGN_PRD.md  IMPROVEMENTS.md  index.md
missions/: benchmark_memory.py  execution-daemon.yaml  http-server.yaml  mission-review.yaml  plan-mode-flight-director.yaml  platform-evolution.yaml  quality-wave-1-2.yaml  quality-wave-3.yaml  quality-wave-4.yaml  quality-wave-5.yaml  quality-wave-b.yaml  ui-extraction.yaml  ui-mission-control.yaml  vector-memory.yaml
scripts/: install.sh  repro_planner_missing_assistant_message.py  smoke_test.sh
specs/: project-harness-v1.md
tests/: test_api_routes.py  test_autonomous.py  test_benchmark.py  test_connectors.py  test_daemon.py  test_docs_structure.py  test_engine.py  test_inject_queue.py  test_integration_ws.py  test_model_catalog.py  test_new_endpoints.py  test_plan_drafts.py  test_planner_adapter.py  test_portability.py  test_project_graph_api.py  test_project_harness.py  test_spec.py  test_state.py  test_state_summary.py  test_token_event.py  test_token_ledger.py  test_utils.py  test_ws.py  test_ws_broadcast.py  test_ws_handler.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+204 files in other folders)
